Set header to fixed on small screens

--- a/src/common/header.css
+++ b/src/common/header.css
@@ -51,9 +51,8 @@ header {
         margin: 0 30px;
     }
 
-    .caption {
-        /* position: relative;
-        left: -5em; */
+    .header-container {
+        position: static;
     }
 
     .sunrise-logo {
