--- a/src/tables.css
+++ b/src/tables.css
@@ -6,7 +6,7 @@
 
   @media screen and (max-width: 790px) {
     .tables-container {
-      padding-top: 16.5em;
+      padding-top: 0em;
     }
   }
 
@@ -14,7 +14,6 @@
   @media screen and (max-width: 520px) {
     .tables-container {
       margin: 0 15px;
-      padding-top: 0;
       padding-bottom: 3em;
     }
   }
